finally proved inv_bij

--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
--prove inv_bij
--prove that the extension of f over a tuple is a bijective if f is bijective
+-prove that the extension of f over a tuple is bijective if f is bijective
 -construct Q
 
